# go-mmo

backend/: .gitignore  Cargo.toml
backend/migrations/2026-02-18-210819-0000_initial/: down.sql  up.sql
backend/src/: lib.rs  main.rs  schema.rs
backend/src/controller/: app_state.rs  client_manager.rs  dto.rs  game_client_command.rs  game_controller.rs  game_server_message.rs  mod.rs  websocket_handler.rs
backend/src/domain/: color.rs  coord.rs  game_service.rs  group.rs  grouped_stones.rs  invalid_move_error.rs  mod.rs  move_changes.rs  stone_placed_changes.rs
backend/src/repository/: group_contacts_mapper.rs  group_mapper.rs  group_repository.rs  mod.rs  stone_mapper.rs
backend/tests/: game_service.rs
webapp/: package.json  pnpm-lock.yaml
webapp/src/: main.tsx
webapp/src/Domain/: Color.ts  Coord.ts  Game.ts  Group.ts
webapp/src/Gateway/: GameClientCommand.ts  GameGateway.ts  GameServerMessage.ts  GroupDto.ts  GroupedStonesDto.ts
webapp/src/View/: GameRenderer.ts
