[package]
name = "go-mmo"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
diesel = { version = "2.2.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = "2.3"
dotenvy = "0.15"
futures-util = "0.3"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.49", features = ["full"] }
